Dev is fixed. It's fully fonctional without dependencies to prod configuration and with new fonctionnalities hugo made

--- a/env-vars/.env.dev
+++ b/env-vars/.env.dev
@@ -1,45 +1,39 @@
+_AIRFLOW_WWW_USER_PASSWORD=airflow
+_AIRFLOW_WWW_USER_USERNAME=airflow
+AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
+AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@airflow-db/airflow
+AIRFLOW__CORE__FERNET_KEY=""
+AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@airflow-db/airflow
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@airflow-db/airflow
+AIRFLOW_CLI_PROFILE=debug
+AIRFLOW_DB_NAME=airflow
+AIRFLOW_DB_PASSWD=airflow
+AIRFLOW_DB_USER=airflow
 AIRFLOW_DIR=../airflow
-AIRFLOW_GH_TOKEN=<your-github-token>
+AIRFLOW_GH_TOKEN=your-github-token
+AIRFLOW_MODE=dev
+AIRFLOW_SCHEDULER_TEST_CMD_URL=http://localhost:8974/health
 AIRFLOW_UID=1001
 AIRFLOW_WEBSERVER_PORT=8080
 AIRFLOW_WEBSERVER_TEST_CMD_URL=http://localhost:8080/health
-
-AIRFLOW_SCHEDULER_TEST_CMD_URL=http://localhost:8974/health
-
-AIRFLOW_CLI_PROFILE=debug
-
-AIRFLOW_DB_USER=airflow
-AIRFLOW_DB_PASSWD=airflow
-AIRFLOW_DB_NAME=airflow
-
 BLOCKCHAIN_API_KEY=<your-blockchain-api-key>
-
-CLIENT_DB_USER=client
-CLIENT_DB_PASSWD=client
 CLIENT_DB_NAME=client
-
-GH_TOKEN=<your-github-token>
-
-INIT_CLIENT_DB_USER=client
-INIT_CLIENT_DB_PASSWD=client
-INIT_CLIENT_DB_NAME=client
-
-KAFKA_PORT=9092
-KAFKA_BROKER_ID=1
-KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
-KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
-KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-
-SPARK_UI_PORT=8880
-SPARK_WORKER_PORT=7077
-
+CLIENT_DB_PASSWD=client
+CLIENT_DB_USER=client
+CRYPTODATA_NET=cryptodata_net
 GRAFANA_PORT=3000
 GRAFANA_SECURITY_ADMIN_PASSWORD=admin
 GRAFANA_SECURITY_ADMIN_USER=admin
-
+INIT_CLIENT_DB_NAME=client
+INIT_CLIENT_DB_PASSWD=client
+INIT_CLIENT_DB_USER=client
+KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+KAFKA_BROKER_ID=1
+KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
+KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
+KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+KAFKA_PORT=9092
+KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
 PROXY_PORT=2376
-
 ZOOKEEPER_CLIENT_PORT=2181
 ZOOKEEPER_TICK_TIME=2000
