Dev is fixed. It's fully fonctional without dependencies to prod configuration and with new fonctionnalities hugo made

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -44,6 +44,8 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    environment:
+      <<: *airflow-common-env
     healthcheck:
       interval: 30s
       retries: 5
@@ -65,6 +67,8 @@ services:
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
+    environment:
+      <<: *airflow-common-env
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -114,6 +118,8 @@ services:
   airflow-triggerer:
     <<: *airflow-common
     command: triggerer
+    environment:
+      <<: *airflow-common-env
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -229,13 +235,19 @@ services:
       - ${AIRFLOW_CLI_PROFILE}
 
   airflow-db:
-    image: postgres:13
+    image: postgres:16.2-alpine3.18
     environment:
       POSTGRES_DB: $AIRFLOW_DB_NAME
       POSTGRES_PASSWORD: $AIRFLOW_DB_PASSWD
       POSTGRES_USER: $AIRFLOW_DB_USER
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "${AIRFLOW_DB_USER}" ]
+      test:
+        [
+          "CMD",
+          "pg_isready",
+          "-U",
+          "postgres",
+        ]
       interval: 10s
       retries: 5
       start_period: 5s
@@ -246,7 +258,7 @@ services:
       - airflow-db-volume:/var/lib/postgresql/data
 
   client_db:
-    image: postgres:13
+    image: postgres:16.2-alpine3.18
     environment:
       POSTGRES_USER: $CLIENT_DB_USER
       POSTGRES_PASSWORD: $CLIENT_DB_PASSWD
@@ -281,8 +293,11 @@ services:
 
   redis:
     image: redis:latest
-    expose:
-      - 6379
+    environment:
+      - REDIS_AOF_ENABLED=no
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL,CONFIG
+    ports:
+      - "6379:6379"
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
@@ -305,8 +320,6 @@ services:
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
-    ports:
-      - "${KAFKA_PORT}:9092" # Only expose one port that will be used both internally and externally if needed
     environment:
       KAFKA_BROKER_ID: $KAFKA_BROKER_ID
       KAFKA_ZOOKEEPER_CONNECT: $KAFKA_ZOOKEEPER_CONNECT
@@ -363,7 +376,7 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: ${GRAFANA_SECURITY_ADMIN_USER}
       GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_SECURITY_ADMIN_PASSWORD}
-      GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH : General/CryptoData
+      GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH: General/CryptoData
     networks:
       - cryptodata_net
     user: "0"
