Dev is fixed. It's fully fonctional without dependencies to prod configuration and with new fonctionnalities hugo made

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -246,7 +246,7 @@ services:
           "CMD",
           "pg_isready",
           "-U",
-          "postgres",
+          "airflow",
         ]
       interval: 10s
       retries: 5
