--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -41,8 +41,11 @@ services:
     <<: *airflow-common
     command: webserver
     depends_on:
+      <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    environment:
+      <<: *airflow-common-env
     healthcheck:
       interval: 30s
       retries: 5
@@ -64,7 +67,10 @@ services:
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
+    environment:
+      <<: *airflow-common-env
     depends_on:
+      <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
     healthcheck:
@@ -87,8 +93,11 @@ services:
     <<: *airflow-common
     command: celery worker
     depends_on:
+      <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    environment:
+      <<: *airflow-common-env
       # Required to handle warm shutdown of the celery workers properly
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
       DUMB_INIT_SETSID: "0"
@@ -109,7 +118,10 @@ services:
   airflow-triggerer:
     <<: *airflow-common
     command: triggerer
+    environment:
+      <<: *airflow-common-env
     depends_on:
+      <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
     healthcheck:
@@ -195,6 +207,7 @@ services:
         exec /entrypoint airflow version
     # yamllint enable rule:line-length
     environment:
+      <<: *airflow-common-env
       RATELIMIT_STORAGE_URI: redis://redis:6379/0
       _AIRFLOW_DB_MIGRATE: "true"
       _AIRFLOW_WWW_USER_CREATE: "true"
@@ -215,6 +228,7 @@ services:
       - -c
       - airflow
     environment:
+      <<: *airflow-common-env
       CONNECTION_CHECK_MAX_COUNT: "0"
     networks:
       - cryptodata_net
