[ADD] Added pull and push actions at each push on prod

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,23 @@ jobs:
             - name: Check out code
               uses: actions/checkout@v4
 
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v1
+
+            - name: Pull Docker images
+              run: docker compose pull
+
+            - name: Login to Docker Hub
+              run: echo "${{ secrets.PROD_DOCKER_HUB_PASSWORD }}" | docker login -u ${{ secrets.PROD_DOCKER_HUB_USERNAME }} --password-stdin
+
+            - name: Build Docker images
+              run: docker compose build
+              working-directory: ./docker
+
+            - name: Push Docker images
+              run: docker compose push
+              working-directory: ./docker
+
             - name: Print GitHub context
               env:
                   GITHUB_CONTEXT: ${{ toJson(github) }}
@@ -43,6 +60,8 @@ jobs:
                   CLIENT_DB_NAME: ${{ secrets.PROD_CLIENT_DB_NAME }}
                   CLIENT_DB_PASSWD: ${{ secrets.PROD_CLIENT_DB_PASSWD }}
                   CLIENT_DB_USER: ${{ secrets.PROD_CLIENT_DB_USER }}
+                  DOCKER_HUB_USERNAME: ${{ secrets.PROD_DOCKER_HUB_USERNAME }}
+                  DOCKER_HUB_PASSWORD: ${{ secrets.PROD_DOCKER_HUB_PASSWORD }}
                   ENV_LOCATION: ${{ secrets.PROD_ENV_LOCATION }}
                   AIRFLOW_GH_TOKEN: ${{ secrets.PROD_AIRFLOW_GH_TOKEN }}
                   GRAFANA_PORT: ${{ secrets.PROD_GRAFANA_PORT }}
@@ -169,6 +188,16 @@ jobs:
                       sed -i "s|^CLIENT_DB_USER=.*|CLIENT_DB_USER=${CLIENT_DB_USER}|" ".env"
                   else
                       echo "CLIENT_DB_USER=${CLIENT_DB_USER}" >> ".env"
+                  fi
+                  if grep -q "^DOCKER_HUB_USERNAME=" ".env"; then
+                      sed -i "s|^DOCKER_HUB_USERNAME=.*|DOCKER_HUB_USERNAME=${DOCKER_HUB_USERNAME}|" ".env"
+                  else
+                      echo "DOCKER_HUB_USERNAME=${DOCKER_HUB_USERNAME}" >> ".env"
+                  fi
+                  if grep -q "^DOCKER_HUB_PASSWORD=" ".env"; then
+                      sed -i "s|^DOCKER_HUB_PASSWORD=.*|DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD}|" ".env"
+                  else
+                      echo "DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD}" >> ".env"
                   fi
                   if grep -q "^GRAFANA_SECURITY_ADMIN_PASSWORD=" ".env"; then
                       sed -i "s|^GRAFANA_SECURITY_ADMIN_PASSWORD=.*|GRAFANA_SECURITY_ADMIN_PASSWORD=${GRAFANA_SECURITY_ADMIN_PASSWORD}|" ".env"
